--- a/bt1.html
+++ b/bt1.html
@@ -5,17 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Dropdown</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        
-        .custom-select option {
-            background-color: #ff6347; 
-                        }
-
-        .custom-select{
-            background-color: #ff6347;
-                        }
-
-    </style>
+    <link rel="stylesheet" href="bt1.css">
 </head>
 <body>
     <div class="container mt-5">
