--- a/bt6.html
+++ b/bt6.html
@@ -5,14 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <style>
-       .cangiua{
-        text-align: center;
-       }
-       .row{
-        justify-content: space-around   ;
-       }
-    </style>
+    <link rel="stylesheet" href="bt6.css">
 </head>
 <body>
     <h1 class="cangiua">Men Men</h1>
