--- a/bt7.html
+++ b/bt7.html
@@ -5,38 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rikkei Cards</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <style>
-        .card {
-            border-radius: 15px;
-            overflow: hidden;
-            position: relative;
-        }
-        .card img {
-            height: 250px;
-            object-fit: cover;
-        }
-        .card-title {
-            color: white;
-            font-weight: bold;
-        }
-        .card-body {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background: rgba(0, 0, 0, 0.5);
-            padding: 20px;
-        }
-        .badge-icon {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            background: purple;
-            color: white;
-            padding: 5px 10px;
-            border-radius: 50%;
-        }
-    </style>
+    <link rel="stylesheet" href="bt7.css">
 </head>
 <body>
     <div class="container mt-4">
