--- a/bt8.html
+++ b/bt8.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment Form</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <style>
-        .container{
-            background-color: rgb(230, 228, 225);
-        }
-    </style>
+    <link rel="stylesheet" href="bt8.css">
 </head>
 <body>
     <div class="container">
